Improve upload handling and tracking

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,12 +10,13 @@
       <div class="card-content p-0">
         <div class="table-responsive">
         <table class="table is-fullwidth">
-          <thead><tr><th>Source</th><th>Last Uploaded</th></tr></thead>
+          <thead><tr><th>Source</th><th>Last Uploaded</th><th>Last Transaction</th></tr></thead>
           <tbody>
           {% for row in meta %}
             <tr>
               <td>{{ row.source }}</td>
               <td>{{ (row.last_updated|format_dt) if row.last_updated else 'Never' }}</td>
+              <td>{{ (row.last_transaction|format_dt) if row.last_transaction else '-' }}</td>
             </tr>
           {% endfor %}
           </tbody>
