--- a/static/styles.css
+++ b/static/styles.css
@@ -366,6 +366,7 @@ input.switch:checked::before {
   justify-content: flex-start;
   align-items: center;
   gap: 0.5rem;
+  cursor: pointer;
 }
 
 /* avoid text selection highlighting on merge label */
