Add SKU map import/export

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -114,27 +114,24 @@
         </div>
       </div>
     </div>
-    <div id="skuSettings" class="tab-pane is-hidden">
-      <div class="box mb-4">
-        <h3 class="title is-5 mb-3">SKU summary</h3>
-        <div class="table-responsive">
-          <table class="table is-fullwidth is-narrow">
-            <thead><tr><th>Type</th><th># of SKUs</th></tr></thead>
-            <tbody>
-            {% for row in sku_stats %}
-              <tr><td>{{ row.type }}</td><td>{{ row.sku_count }}</td></tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <p>
-        Manage SKU aliases and categories on the
-        <a href="{{ url_for('sku_map_page') }}">SKU map page</a>.
-      </p>
-    </div>
       <button type="submit" class="mdc-button mdc-button--raised">Save</button>
     </form>
+    <div id="skuSettings" class="tab-pane is-hidden">
+      <div class="box mb-4">
+        <h3 class="title is-5 mb-3">Export SKU map</h3>
+        <a class="mdc-button mdc-button--raised" href="{{ url_for('export_sku_map') }}">Download CSV</a>
+      </div>
+      <div class="box mb-4">
+        <h3 class="title is-5 mb-3">Import SKU map</h3>
+        <form method="post" enctype="multipart/form-data" action="{{ url_for('import_sku_map') }}">
+          <div class="field mb-4">
+            <label class="label">SKU map file</label>
+            <input class="input" type="file" name="sku_file" accept=".csv,.xls,.xlsx" required>
+          </div>
+          <button type="submit" class="mdc-button mdc-button--raised">Import</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 <script>
