--- a/static/styles.css
+++ b/static/styles.css
@@ -577,3 +577,14 @@ input.switch:checked::before {
   max-width: 500px;
   width: 100%;
 }
+
+/* color inputs stacked below labels */
+.color-input {
+  display: block;
+  margin-top: 0.25rem;
+  padding: 0;
+  width: 3rem;
+  height: 2rem;
+  border: none;
+  background: none;
+}
